@@ -1,3 +1,7 @@
+2008-01-15  John Robeson <johnny@localmomentum.net>
+
+    Add more ignored files/directories to lib/config.py.in
+
 2008-01-06  John Robeson <johnny@localmomentum.net>
 
     Change install xinitrc to no for slackware
